--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,6 @@
 {
-  "tabWidth": 2,
-  "useTabs": false
+	"tabWidth": 2,
+	"useTabs": true,
+	"prettier.singleQuote": true,
+	"prettier.jsxSingleQuote": true
 }
