--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
 	"tabWidth": 2,
 	"useTabs": true,
-	"prettier.singleQuote": true,
-	"prettier.jsxSingleQuote": true
+	"singleQuote": true,
+	"jsxSingleQuote": true
 }
