--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"astro": "^1.4.0",
 		"preact": "^10.7.3",
 		"react": "^18.1.0",
-		"react-dom": "^18.1.0"
+		"react-dom": "^18.1.0",
+		"react-just-parallax": "^3.1.14"
 	},
 	"devDependencies": {
 		"prettier": "^2.7.1",
