--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@algolia/client-search": "^4.13.1",
+		"@astrojs/mdx": "^0.11.3",
 		"@astrojs/preact": "^1.1.1",
 		"@astrojs/react": "^1.1.4",
 		"@docsearch/css": "^3.1.0",
