--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"preact": "^10.7.3",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
-		"react-scroll-parallax": "^3.3.1"
+		"react-just-parallax": "^3.1.14"
 	},
 	"devDependencies": {
 		"prettier": "^2.7.1",
