--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"preact": "^10.7.3",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
-		"react-just-parallax": "^3.1.14"
+		"react-just-parallax": "^3.1.14",
+		"react-use-observer": "^2.2.4"
 	},
 	"devDependencies": {
 		"prettier": "^2.7.1",
