--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@types/react": "^17.0.45",
 		"@types/react-dom": "^18.0.0",
 		"astro": "^1.4.0",
+		"astro-compress": "^1.0.11",
 		"preact": "^10.7.3",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
