--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@astrojs/mdx": "^0.11.3",
 		"@astrojs/preact": "^1.1.1",
 		"@astrojs/react": "^1.1.4",
+		"@astrojs/sitemap": "^1.0.0",
 		"@docsearch/css": "^3.1.0",
 		"@docsearch/react": "^3.1.0",
 		"@types/node": "^18.0.0",
