--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,8 @@
 {
-	"recommendations": ["astro-build.astro-vscode"],
+	"recommendations": [
+		"astro-build.astro-vscode",
+		"rioukkevin.vscode-git-commit",
+		"esbenp.prettier-vscode"
+	],
 	"unwantedRecommendations": []
 }
