Style: use prettier on all files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,5 +93,6 @@
 	],
 	"[astro]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
-	}
+	},
+	"prettier.documentSelectors": ["**/*.astro"]
 }
