--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	},
 	"devDependencies": {
 		"prettier": "^2.7.1",
-		"prettier-plugin-astro": "^0.5.5"
+		"prettier-plugin-astro": "^0.5.5",
+		"sass": "^1.55.0"
 	}
 }
