--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@algolia/client-search": "^4.13.1",
 		"@astrojs/mdx": "^0.11.3",
+		"@astrojs/partytown": "^1.0.1",
 		"@astrojs/preact": "^1.1.1",
 		"@astrojs/react": "^1.1.4",
 		"@astrojs/sitemap": "^1.0.0",
