Chore: update vscodeGitCommit settings for project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,61 @@
 {
+	"vscodeGitCommit.template": [
+		"{type}: {action}{what_was_done}\n\n{why_it_was_done}{breaking}"
+	],
 	"vscodeGitCommit.variables": {
 		"prefix": "keke",
+		"action": [
+			{
+				"label": "",
+				"detail": "❌ no action to describe"
+			},
+			{
+				"label": "add ",
+				"detail": "🆕 a new feature is introduced with the changes"
+			},
+			{
+				"label": "remove ",
+				"detail": "🗑️ removing code or files"
+			},
+			{
+				"label": "update ",
+				"detail": "🔧 an existing feature is updated with the changes"
+			},
+			{
+				"label": "move ",
+				"detail": "🚚 moving files, folders or code"
+			},
+			{
+				"label": "fix ",
+				"detail": "🐛 something was not correct and now it is"
+			},
+			{
+				"label": "change ",
+				"detail": "🔧 changing code or files without adding or removing"
+			},
+			{
+				"label": "improve ",
+				"detail": "🏁 performance improvements"
+			},
+			{
+				"label": "setup ",
+				"detail": "🔧 setting up the project or dependencies"
+			},
+			{
+				"label": "update dependencies ",
+				"detail": "🔧 updating dependencies"
+			}
+		],
+		"breaking": [
+			{
+				"label": "",
+				"detail": "❌ no breaking change to describe"
+			},
+			{
+				"label": "\n\nBREAKING CHANGE",
+				"detail": "💥 a breaking change: a feature that was previously available will now behave differently"
+			}
+		],
 		"type": [
 			{
 				"label": "Feat",
@@ -50,47 +105,8 @@
 				"label": "WIP",
 				"detail": "🚧 work in progress"
 			}
-		],
-		"action": [
-			{
-				"label": "",
-				"detail": "❌ no action to describe"
-			},
-			{
-				"label": "add ",
-				"detail": "🆕 a new feature is introduced with the changes"
-			},
-			{
-				"label": "update ",
-				"detail": "🔧 refactored code that neither fixes a bug nor adds a feature "
-			},
-			{
-				"label": "remove ",
-				"detail": "🗑️ removing code or files"
-			},
-			{
-				"label": "change ",
-				"detail": "🔧 refactored code that neither fixes a bug nor adds a feature "
-			},
-			{
-				"label": "improve ",
-				"detail": "🏁 performance improvements"
-			}
-		],
-		"breaking": [
-			{
-				"label": "",
-				"detail": "❌ no breaking change"
-			},
-			{
-				"label": "\n\nBREAKING CHANGE",
-				"detail": "💥 a breaking change: a feature that was previously available will now behave differently"
-			}
 		]
 	},
-	"vscodeGitCommit.template": [
-		"{type}: {action}{what_was_done}\n\n{why_it_was_done}{breaking}"
-	],
 	"[astro]": {
 		"editor.defaultFormatter": "astro-build.astro-vscode"
 	},
