--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"check": "astro check && tsc",
 		"build": "astro build",
 		"preview": "astro preview",
-		"astro": "astro"
+		"astro": "astro",
+		"preinstall": "npx only-allow pnpm"
 	},
 	"dependencies": {
 		"@algolia/client-search": "^4.14.2",
