--- a/package.json
+++ b/package.json
@@ -1,44 +1,45 @@
 {
-	"name": "webdev-learning-materials-page",
-	"type": "module",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "astro dev",
-		"start": "astro dev",
-		"check": "astro check && tsc",
-		"build": "astro build",
-		"preview": "astro preview",
-		"astro": "astro",
-		"preinstall": "npx only-allow pnpm"
-	},
-	"dependencies": {
-		"@algolia/client-search": "^4.14.2",
-		"@astrojs/mdx": "^0.11.6",
-		"@astrojs/preact": "^1.2.0",
-		"@astrojs/react": "^1.2.2",
-		"@astrojs/sitemap": "^1.0.0",
-		"@docsearch/css": "^3.3.0",
-		"@docsearch/react": "^3.3.0",
-		"@types/node": "^18.11.9",
-		"@types/react": "^18.0.25",
-		"@types/react-dom": "^18.0.9",
-		"astro": "^1.6.9",
-		"astro-compress": "^1.1.7",
-		"autoprefixer": "^10.4.13",
-		"postcss": "^8.4.19",
-		"preact": "^10.11.3",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-just-parallax": "^3.1.14",
-		"react-use-observer": "^2.2.4",
-		"rollup": ">=3"
-	},
-	"devDependencies": {
-		"prettier": "^2.7.1",
-		"prettier-plugin-astro": "^0.7.0",
-		"sass": "^1.56.1",
-		"stylelint": "^14.15.0",
-		"stylelint-config-standard": "^29.0.0"
-	}
+  "name": "webdev-learning-materials-page",
+  "type": "module",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "check": "astro check && tsc",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro",
+    "preinstall": "npx only-allow pnpm"
+  },
+  "dependencies": {
+    "@algolia/client-search": "^4.14.2",
+    "@astrojs/mdx": "^0.11.6",
+    "@astrojs/preact": "^1.2.0",
+    "@astrojs/react": "^1.2.2",
+    "@astrojs/sitemap": "^1.0.0",
+    "@docsearch/css": "^3.3.0",
+    "@docsearch/react": "^3.3.0",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "astro": "^1.6.9",
+    "astro-compress": "^1.1.7",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "preact": "^10.11.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-just-parallax": "^3.1.14",
+    "react-use-observer": "^2.2.4",
+    "rollup": ">=3"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.28.1",
+    "prettier": "^2.7.1",
+    "prettier-plugin-astro": "^0.7.0",
+    "sass": "^1.56.1",
+    "stylelint": "^14.15.0",
+    "stylelint-config-standard": "^29.0.0"
+  }
 }
