--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -1,18 +1,28 @@
-name: Vitest Tests
+name: Runs Vitest Unit tests
+
 on:
   push:
-    branches: [main, master]
+    branches: [main]
   pull_request:
-    branches: [main, master]
+    branches: [main]
+
 jobs:
-  test:
-    timeout-minutes: 60
+  build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [16.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node-version }}
+          cache: "pnpm"
+      #- run: pnpm run build --if-present
       - name: Execute Unit tests
-      - run: pnpm ci
-      - run: pnpm test
+      - run: pnpm install
+	    - run: pnpm run test
