--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -7,12 +7,20 @@ on:
 jobs:
   test:
     timeout-minutes: 60
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        node-version: [15]
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+    - uses: pnpm/action-setup@v2.2.4
       with:
-        node-version: 16
+        version: 7
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'pnpm'
     - name: Install dependencies
       run: pnpm install
     - name: Install Playwright Browsers
