--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: pnpm dlx playwright test
+      run: npx playwright test
     - uses: actions/upload-artifact@v3
       if: always()
       with:
