CI: update playwright action

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,6 +25,8 @@ jobs:
       run: pnpm install
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+    - name: Launch App
+      run: pnpm dev
     - name: Run Playwright tests
       run: npx playwright test
     - uses: actions/upload-artifact@v3
