--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -28,9 +28,7 @@ jobs:
     - name : Build app
       run: pnpm build
     - name: Launch app
-      run: pnpm preview
-    - name: Run Playwright tests      
-      run: npx playwright test
+      run: pnpm preview & sleep 10 && curl http://localhost:3000 && npx playwright test
     - uses: actions/upload-artifact@v3
       if: always()
       with:
