--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"prettier-plugin-astro": "^0.7.0",
 		"sass": "^1.56.1",
 		"stylelint": "^14.15.0",
+		"stylelint-config-prettier": "^9.0.4",
 		"stylelint-config-standard": "^29.0.0",
 		"vitest": "^0.25.3"
 	}
