--- a/package.json
+++ b/package.json
@@ -14,35 +14,35 @@
 		"test": "vitest"
 	},
 	"dependencies": {
-		"@algolia/client-search": "^4.14.2",
+		"@algolia/client-search": "^4.14.3",
 		"@astrojs/mdx": "^0.11.6",
 		"@astrojs/preact": "^1.2.0",
 		"@astrojs/react": "^1.2.2",
-		"@astrojs/sitemap": "^1.0.0",
-		"@docsearch/css": "^3.3.0",
-		"@docsearch/react": "^3.3.0",
-		"@types/node": "^18.11.9",
-		"@types/react": "^18.0.25",
-		"@types/react-dom": "^18.0.9",
-		"astro": "^1.6.9",
-		"astro-compress": "^1.1.7",
+		"@astrojs/sitemap": "^1.0.1",
+		"@docsearch/css": "^3.3.3",
+		"@docsearch/react": "^3.3.3",
+		"@types/node": "^18.14.0",
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.11",
+		"astro": "2.0.14",
+		"astro-compress": "^1.1.33",
 		"autoprefixer": "^10.4.13",
-		"postcss": "^8.4.19",
-		"preact": "^10.11.3",
+		"postcss": "^8.4.21",
+		"preact": "^10.12.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-just-parallax": "^3.1.14",
 		"react-use-observer": "^2.2.4",
-		"rollup": ">=3"
+		"rollup": "^3.17.2"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.28.1",
-		"prettier": "^2.7.1",
-		"prettier-plugin-astro": "^0.7.0",
-		"sass": "^1.56.1",
-		"stylelint": "^14.15.0",
-		"stylelint-config-prettier": "^9.0.4",
+		"@playwright/test": "^1.31.1",
+		"prettier": "^2.8.4",
+		"prettier-plugin-astro": "^0.7.2",
+		"sass": "^1.58.3",
+		"stylelint": "^14.16.1",
+		"stylelint-config-prettier": "^9.0.5",
 		"stylelint-config-standard": "^29.0.0",
-		"vitest": "^0.25.3"
+		"vitest": "^0.25.8"
 	}
 }
