--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"preview": "astro preview",
 		"astro": "astro",
 		"preinstall": "npx only-allow pnpm",
-		"test": "vitest"
+		"test": "vitest",
+		"e2e": "playwright test"
 	},
 	"dependencies": {
 		"@algolia/client-search": "^4.14.3",
