feat: respect reduced-motion preference across the website

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -110,5 +110,8 @@
 	"[astro]": {
 		"editor.defaultFormatter": "astro-build.astro-vscode"
 	},
-	"prettier.documentSelectors": ["**/*.astro"]
+	"prettier.documentSelectors": [
+		"**/*.astro"
+	],
+	"prettier.configPath": ".prettierrc"
 }
