--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.31.1",
+		"@types/gtag.js": "^0.0.12",
 		"prettier": "^2.8.4",
 		"prettier-plugin-astro": "^0.7.2",
 		"sass": "^1.58.3",
