--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"@astrojs/sitemap": "^1.0.1",
 		"@docsearch/css": "^3.3.3",
 		"@docsearch/react": "^3.3.3",
+		"@radix-ui/react-dialog": "^1.0.4",
+		"@radix-ui/react-icons": "^1.3.0",
 		"@types/node": "^18.14.0",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
