--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
 		"astro": "2.0.14",
-		"astro-compress": "^1.1.33",
+		"astro-compress": "2.0.14",
 		"autoprefixer": "^10.4.13",
 		"clsx": "^1.2.1",
 		"postcss": "^8.4.21",
