--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@astrojs/preact": "^1.2.0",
 		"@astrojs/react": "^1.2.2",
 		"@astrojs/sitemap": "^1.0.1",
+		"@astrojs/tailwind": "^4.0.0",
 		"@docsearch/css": "^3.3.3",
 		"@docsearch/react": "^3.3.3",
 		"@radix-ui/react-dialog": "^1.0.4",
@@ -27,7 +28,7 @@
 		"@types/node": "^18.14.0",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
-		"astro": "2.0.14",
+		"astro": "^2.6.5",
 		"astro-compress": "2.0.14",
 		"autoprefixer": "^10.4.13",
 		"clsx": "^1.2.1",
@@ -37,7 +38,8 @@
 		"react-dom": "^18.2.0",
 		"react-just-parallax": "^3.1.14",
 		"react-use-observer": "^2.2.4",
-		"rollup": "^3.17.2"
+		"rollup": "^3.17.2",
+		"tailwindcss": "^3.0.24"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.31.1",
@@ -48,6 +50,7 @@
 		"stylelint": "^14.16.1",
 		"stylelint-config-prettier": "^9.0.5",
 		"stylelint-config-standard": "^29.0.0",
+		"tailwindcss-animated": "^1.0.1",
 		"vitest": "^0.34.2"
 	}
 }
