--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
 		"react-dom": "^18.2.0",
 		"react-just-parallax": "^3.1.14",
 		"react-use-observer": "^2.2.4",
-		"rollup": "^3.17.2"
+		"rollup": "^3.17.2",
+		"swr": "^2.2.1"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.31.1",
