--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@astrojs/tailwind": "^4.0.0",
 		"@docsearch/css": "^3.3.3",
 		"@docsearch/react": "^3.3.3",
+		"@radix-ui/react-accordion": "^1.1.2",
 		"@radix-ui/react-dialog": "^1.0.4",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@types/node": "^18.14.0",
