Update docsearch colors to match new color theme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,7 +108,7 @@
 		]
 	},
 	"[astro]": {
-		"editor.defaultFormatter": "esbenp.prettier-vscode"
+		"editor.defaultFormatter": "astro-build.astro-vscode"
 	},
 	"prettier.documentSelectors": ["**/*.astro"],
 	"prettier.configPath": ".prettierrc"
