--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"@types/node": "^18.14.0",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
-		"astro": "^2.6.5",
+		"astro": "^2.10.14",
 		"astro-compress": "2.0.14",
 		"autoprefixer": "^10.4.13",
 		"clsx": "^1.2.1",
@@ -40,8 +40,8 @@
 		"react-just-parallax": "^3.1.14",
 		"react-use-observer": "^2.2.4",
 		"rollup": "^3.17.2",
-		"tailwindcss": "^3.0.24",
-		"swr": "^2.2.1"
+		"swr": "^2.2.2",
+		"tailwindcss": "^3.3.3"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.31.1",
@@ -53,6 +53,6 @@
 		"stylelint-config-prettier": "^9.0.5",
 		"stylelint-config-standard": "^29.0.0",
 		"tailwindcss-animated": "^1.0.1",
-		"vitest": "^0.34.2"
+		"vitest": "^0.34.3"
 	}
 }
