--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,11 +2,11 @@ name: E2E Tests
 on:
   push:
     branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+  workflow_dispatch:
+    
 jobs:
   test:
-    timeout-minutes: 5
+    timeout-minutes: 10
     runs-on: ubuntu-20.04
     strategy:
       matrix:
