Fix mobile footer wrapping

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,14 @@
 	"useTabs": true,
 	"singleQuote": true,
 	"jsxSingleQuote": true,
-	"semi": false
+	"semi": false,
+	"plugins": ["prettier-plugin-astro"],
+	"overrides": [
+		{
+			"files": "*.astro",
+			"options": {
+				"parser": "astro"
+			}
+		}
+	]
 }
