--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"astro": "^2.10.14",
 		"astro-compress": "2.0.14",
 		"autoprefixer": "^10.4.13",
+		"body-scroll-lock": "4.0.0-beta.0",
 		"clsx": "^1.2.1",
 		"postcss": "^8.4.21",
 		"preact": "^10.12.1",
@@ -45,6 +46,7 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.31.1",
+		"@types/body-scroll-lock": "^3.1.0",
 		"@types/gtag.js": "^0.0.12",
 		"prettier": "3.0.2",
 		"prettier-plugin-astro": "^0.7.2",
