Add framer motion animation to modal

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"autoprefixer": "^10.4.15",
 		"body-scroll-lock": "4.0.0-beta.0",
 		"clsx": "^1.2.1",
+		"framer-motion": "^10.16.2",
 		"postcss": "^8.4.29",
 		"preact": "^10.17.1",
 		"react": "^18.2.0",
