--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,7 +2,9 @@
 	"recommendations": [
 		"astro-build.astro-vscode",
 		"rioukkevin.vscode-git-commit",
-		"esbenp.prettier-vscode"
+		"esbenp.prettier-vscode",
+		"bradlc.vscode-tailwindcss",
+		"streetsidesoftware.code-spell-checker"
 	],
 	"unwantedRecommendations": []
 }
